Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-65940

Windows: "index out of range" in QEventDispatcherWin32::activateEventNotifiers()

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.10.1
    • 5.10.0
    • Core: Event loop
    • None
    • Windows 10 MSVC2017 64bit
    • 6dbf3576093858d981d8321b00f0b19faa7cf217

    Description

      ASSERT failure in QList<T>::at: "index out of range", file c:\dev\5-vs17-510\qt-510\qtbase\include\qtcore\../../src/corelib/tools/qlist.h, line 541

      Steps to reproduce:

      • Build Qt Creator debug against 5.10
      • Open a console project
      • Run
      • Close console window
        -> crash

      In release mode, complete hangs of Creator have been observed.

      Relevant commits: https://codereview.qt-project.org/#/c/208431/

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes